<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.fragment.StoreListFragment">

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:paddingLeft="15dp"
        android:paddingTop="25dp"
        android:text="@string/address"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/address_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address"
        android:paddingLeft="35dp"
        android:paddingTop="10dp"
        android:textColor="@android:color/black"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address_value"
        android:paddingLeft="15dp"
        android:paddingTop="25dp"
        android:text="@string/phone"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/phone_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone"

        android:paddingLeft="35dp"
        android:paddingTop="10dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone_value"
        android:paddingLeft="15dp"
        android:paddingTop="25dp"
        android:text="@string/website"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/website_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/website"
        android:paddingLeft="35dp"
        android:paddingTop="10dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/website_value"
        android:paddingLeft="15dp"
        android:paddingTop="25dp"
        android:text="@string/email"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/email_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:paddingLeft="35dp"
        android:paddingTop="10dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/instruments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_value"
        android:paddingLeft="15dp"
        android:paddingTop="25dp"
        android:text="@string/instruments"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/instruments_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_value"
        android:layout_toRightOf="@+id/instruments"
        android:paddingTop="25dp"
        android:paddingLeft="10dp"
        android:text="@string/value_stub"
        android:textColor="@android:color/black"
        android:textSize="24sp" />


</RelativeLayout>
